<resources>
    <string name="app_name">App!</string>
    <string name="sign_message_up">Sign in or sign up</string>
    <string name="sign_message_down">With your phone no</string>
    <string name="sign_message_enter">Enter your phone number</string>
    <string name="skip_button">No, thanks.SKIP</string>
    <string name="send_button_text">SEND CODE VIA SMS</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_message_up">Set your password</string>
    <string name="login_message_down">Hard to crack</string>
    <string name="login_text_password">Enter your password</string>
    <string name="login_button_text">Next</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm password</string>
    <string name="error_invalid_password">The passwords are too short</string>
    <string name="error_incorrect_password">The passwords are incorrect</string>

    <string name="fill_profile">Fill your profile data</string>
    <string name="help_text">Help us to know you</string>
    <string name="import_text">Import from Social Media</string>
    <string name="prompt_email">EMAIL</string>
    <string name="f_import">Import from Facebook</string>
    <string name="vk_import">Import from VKontakte</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="or_text">or</string>
    <string name="fill_text">Fill it by yourself</string>
    <string name="register_text">Register</string>
    <string name="facebook_app_id">1148277408577788</string>
    <string name="YOUR_API_KEY">AIzaSyBJAhPC_A5tZjzWuHWkb1LjGdSHGFAjJak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_homescreen">OFFERS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="storesMap">STORES</string>

</resources>
