<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laurentiu.demoproject.MainLoginActivity"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/login_view"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:src="@drawable/hard_to_crack"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sign_text_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view"
        android:layout_centerHorizontal="true"
        android:text="@string/login_message_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/sign_message_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_text_up"
        android:layout_centerHorizontal="true"
        android:text="@string/login_message_down"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayoutPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sign_message_down">

        <View
            android:layout_centerVertical="true"
            android:id="@+id/left_line"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@+id/sign_text_enter"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/sign_text_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <View
            android:layout_centerVertical="true"
            android:id="@+id/right_line"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_toEndOf="@+id/sign_text_enter"
            android:background="#ffffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_password1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/relativeLayoutPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_edit_text" />

        <TextView
            android:id="@+id/textPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sendPassword1"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:paddingLeft="20dp"
            android:text="@string/login_password"
            android:textColor="#949191" />

        <EditText
            android:id="@+id/sendPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:textColor="#080808"
            android:typeface="monospace" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_password2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/layout_password1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_edit_text" />

        <TextView
            android:id="@+id/text_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sendPassword2"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:paddingLeft="20dp"
            android:text="@string/login_confirm_password"
            android:textColor="#949191" />

        <EditText
            android:id="@+id/sendPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:textColor="#080808" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/layout_password2">

        <Button
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/next_button"
            android:text="@string/login_button_text"
            android:textColor="#ffffffff"
            android:background="@drawable/layout_send_code" />


    </RelativeLayout>

</RelativeLayout>
