<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        tools:context=".RegisterActivity"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top|center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/fill_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fill_profile"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fill_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/help_text"
                android:textColor="#ABBDBC" />


            <TextView
                android:id="@+id/import_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/import_text"
                android:textColor="@color/white" />


            <RelativeLayout
                android:id="@+id/f_layout"
                android:layout_width="254dp"
                android:layout_height="45dp"
                android:layout_below="@id/import_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/facebook_button">

                <Button
                    android:id="@+id/import_F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/f_logo"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/f_import"
                    android:textAllCaps="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vk_layout"
                android:layout_width="254dp"
                android:layout_height="45dp"
                android:layout_below="@id/f_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/vk_button">

                <Button
                    android:id="@+id/import_VK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/vk_logo"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/vk_import"
                    android:textAllCaps="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/or_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/vk_layout"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <View
                    android:id="@+id/left_line"
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/sign_text_enter"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/sign_text_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/or_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/right_line"
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/sign_text_enter"
                    android:background="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fill2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/or_layout"
                android:layout_centerHorizontal="true"
                android:text="@string/fill_text"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/layout_credentials"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/fill2_text"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/layout_edit_text" />

                <TextView
                    android:id="@+id/text_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/first_name_input"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:paddingLeft="20dp"
                    android:text="@string/first_name"
                    android:textColor="@color/greyColor" />

                <EditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/vertical_line"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@+id/last_name_input"
                    android:paddingLeft="20dp"
                    android:textColor="@color/blackColor" />

                <View
                    android:id="@+id/vertical_line"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@color/greyColor" />

                <TextView
                    android:id="@+id/text_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/last_name_input"
                    android:layout_toEndOf="@+id/vertical_line"
                    android:enabled="false"
                    android:paddingLeft="20dp"
                    android:text="@string/last_name"
                    android:textColor="@color/greyColor" />

                <EditText
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/vertical_line"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:paddingLeft="20dp"
                    android:textColor="@color/blackColor" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/layout_credentials"
                android:layout_marginTop="@dimen/margins_sides"
                android:paddingLeft="@dimen/margins_sides"
                android:paddingRight="@dimen/margins_sides">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/layout_edit_text" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/email_input"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:paddingLeft="20dp"
                    android:text="@string/prompt_email"
                    android:textColor="@color/greyColor" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="@color/blackColor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_password1_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/enter_box"
                android:layout_below="@+id/layout_email"
                android:layout_marginTop="@dimen/margins_sides"
                android:paddingLeft="@dimen/margins_sides"
                android:paddingRight="@dimen/margins_sides">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/enter_box"
                    android:background="@drawable/layout_edit_text" />

                <TextView
                    android:id="@+id/textPassword1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/registerPassword1"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:paddingLeft="20dp"
                    android:text="@string/login_password"
                    android:textColor="#949191" />

                <EditText
                    android:id="@+id/registerPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#080808" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_password2_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/enter_box"
                android:layout_below="@+id/layout_password1_register"
                android:paddingLeft="@dimen/margins_sides"
                android:paddingRight="@dimen/margins_sides"
                android:layout_marginTop="@dimen/margins_sides">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/layout_edit_text" />

                <TextView
                    android:id="@+id/text_password2_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/registerPassword2"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:paddingLeft="20dp"
                    android:text="@string/login_confirm_password"
                    android:textColor="#949191" />

                <EditText
                    android:id="@+id/registerPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#080808" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_below="@+id/layout_password2_register">

                <Button
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/register_button"
                    android:text="@string/register_text"
                    android:textColor="@color/white"
                    android:background="@drawable/layout_send_code"
                    android:paddingRight="@dimen/margins_sides" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>