<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laurentiu.demoproject.MainLoginActivity"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/backgound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_login" />

    <ImageView
        android:id="@+id/login_view"
        android:layout_width="25dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:src="@drawable/lock_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sign_text_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_view"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_message_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/sign_message_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_text_up"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_message_down"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <RelativeLayout
        android:id="@+id/relativeLayoutEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sign_message_down">

        <View
            android:layout_centerVertical="true"
            android:id="@+id/left_line"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@+id/sign_text_enter"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/sign_text_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_message_enter"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <View
            android:layout_centerVertical="true"
            android:id="@+id/right_line"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_toEndOf="@+id/sign_text_enter"
            android:background="#ffffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/relativeLayoutEnter"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_edit_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sendText"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:paddingLeft="20dp"
            android:text="PHONE NUMBER"
            android:textColor="#949191" />

        <EditText
            android:id="@+id/sendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="20dp"
            android:textColor="#080808" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/layout_phone_number">

        <Button
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/send_button"
            android:text="@string/send_button_text"
            android:textColor="#ffffffff"
            android:background="@drawable/layout_send_code" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_send"
        android:layout_marginTop="10dp"
        android:text="Forgot password"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skip_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/skip_button"
        android:textColor="#ffffffff"
        android:background="@android:color/transparent"
        android:contextClickable="true"
        android:textAllCaps="false"/>
</RelativeLayout>
